# linkword-py

./: .gitignore  config.yaml  main.py  pyproject.toml
scripts/: migrate_nav_to_zvec.py
src/: __init__.py  app.py
src/api/: __init__.py
src/api/routes/: __init__.py  article.py  banner.py  health.py  link.py  nav.py
src/core/: __init__.py  config.py  logger.py
src/services/: __init__.py  image_gen.py  internet_search.py  nav_vector.py
