[project]
name = "py-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-openai>=0.2.0",
    "uvicorn[standard]>=0.32.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "pillow>=10.0.0",
    "ddgs>=9.0.0",
    "zvec>=0.2.1",
    "pymysql>=1.1.0",
]

# 国内 PyPI 镜像：default=true 时不再访问 pypi.org，仅从此索引解析/下载
# 其他镜像可将 url 改为：https://mirrors.aliyun.com/pypi/simple/
[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
